--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "interactive-scala",
 	"displayName": "Interactive Scala",
-	"description": "Run Scala code by a click on a button!",
+	"description": "Run Scala code snippets by a click on a button!",
 	"publisher": "alssys",
 	"version": "0.1.0",
 	"repository": "https://github.com/matt035343/interactive-scala",
+	"icon": "img/icon.png",
+	"license": "MIT",
 	"engines": {
 		"vscode": "^1.37.0"
 	},
