Fixes #5. Added context menu option to send code to interpreter.

--- a/package.json
+++ b/package.json
@@ -47,7 +47,14 @@
 					}
 				}
 			}
-		]
+		],
+		"menus": {
+			"editor/context": [{
+				"when": "editorHasSelection && resourceLangId == scala",
+				"command": "interactiveScala.executeInInteractiveScala",
+				"group": "z_commands"
+			}]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
