Fixes #18. Scala environment is now required to use shortcut

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 				"command": "interactiveScala.executeInInteractiveScala",
 				"key": "alt+enter",
 				"when": "editorTextFocus"
+				"when": "editorTextFocus && resourceLangId == scala"
 			}
 		],
 		"configuration": [
